add course calendar day overrides
